infobox: fix line-wrapping of client list

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -135,6 +135,7 @@ table.attributes td {
   font-family: "ionicons";
   color: #1566A9;
   word-spacing: -0.2em;
+  white-space: normal;
 }
 
 .infobox {
